Closed
Bug 1583703
Opened 6 years ago
Closed 6 years ago
Assertion failure frameInfo.mDocFramesSeen == frameInfo.mDocFramesTotal on device reset
Categories
(Core :: Graphics: WebRender, defect)
Core
Graphics: WebRender
Tracking
()
RESOLVED
FIXED
mozilla71
| Tracking | Status | |
|---|---|---|
| firefox71 | --- | fixed |
People
(Reporter: sotaro, Assigned: sotaro)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
Debug build hit assertion failure on device reset. The device reset could be triggered with "dxcap -forcetdr".
Updated•6 years ago
|
Keywords: regression
| Assignee | ||
Updated•6 years ago
|
Assignee: nobody → sotaro.ikeda.g
| Assignee | ||
Comment 1•6 years ago
|
||
Log out when the assertion failure was hit.
Assertion failure: frameInfo.mDocFramesSeen == frameInfo.mDocFramesTotal, at d:/firefox_bld_dsk/mozilla-central/gfx/webrender_bindings/RenderThread.cpp:303
| Assignee | ||
Comment 2•6 years ago
|
||
When device reset happens, RenderThread::HandleFrameOneDoc() does not pop a pending frame.
| Assignee | ||
Comment 3•6 years ago
|
||
| Assignee | ||
Comment 4•6 years ago
|
||
Pushed by sikeda.birchill@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/1704996ccd37
Fix reset handling in RenderThread::HandleFrameOneDoc() r=nical
Comment 6•6 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 6 years ago
status-firefox71:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla71
Updated•4 years ago
|
Has Regression Range: --- → yes
You need to log in
before you can comment on or make changes to this bug.
Description
•