Bug 1583703 - Fix reset handling in RenderThread::HandleFrameOneDoc() r=nical

Move DeviceReset handling before the assert. It is OK, since RendererOGL instance is not re-used after the DeviceReset. It is replaced by a new RendererOGL.

Differential Revision: https://phabricator.services.mozilla.com/D47036

--HG--
extra : moz-landing-system : lando